(3) Removed parameters bb and vox from GUI.
(4) No distiction at GUI level whether estimate or write segmentations.
(5) Handling of sanlm/ornlm flags was still not yet correct. 
(6) Added strict testing in compile script.
(7) Cleaned some code according to new warnings from #6.
(8) Recompiled all CAT- and mex-files.

------------------------------------------------------------------------
r603 | gaser | 2014-09-19 10:30:56

M       CHANGES.txt
M       cg_vbm_write.m
M       vbm12.man
M       vbm_surf_createCS.m

some small bugs removed...
------------------------------------------------------------------------
r604 | gaser | 2014-09-19 11:48:09

M       CHANGES.txt
M       cg_vbm_batch.m
 M      fsaverage/lh.sphere.gii
 M      fsaverage/rh.sphere.gii
M       vbm12.man
M       vbm_surf_createCS.m

Manual flipping of vertices according to vmat in vbm_surf_createCS.m did
not considered all potential cases.
------------------------------------------------------------------------
r605 | gaser | 2014-09-19 15:53:35

M       CHANGES.txt
M       vbm_surf_createCS.m

Force saving compressed gifti because ASCII format caused trouble with CAT.
 
------------------------------------------------------------------------
r606 | gaser | 2014-09-22 13:17:19

M       CHANGES.txt
M       cg_vbm_write.m

Dartel was wrongly deselected if surfaces awere written, but no normalized
images. 
------------------------------------------------------------------------
r607 | gaser | 2014-09-22 13:29:28

M       CHANGES.txt
A       vbm_surf_resamp_freesurfer.m

Added vbm_surf_resamp_freesurfer.m to resample freesurfer data to gifti.

------------------------------------------------------------------------
r608 | gaser | 2014-09-22 13:45:12

M       CHANGES.txt
M       cg_vbm_write.m
M       vbm12.man

Removed error in cg_vbm_write.m for undefined method 'colon'.

------------------------------------------------------------------------
r609 | gaser | 2014-09-23 16:42:50