@@ -138,7 +138,7 @@ h71  = uimenu(h7,...
 	'Label',	'Display surface',...
 	'Separator',	'off',...
 	'Tag',		'Display surface',...
-	'CallBack', 'P=spm_select([1 12],''gifti'',''Select surface''); for i=1:size(P,1), h = spm_mesh_render(deblank(P(i,:))); set(h.figure,''MenuBar'',''none'',''Toolbar'',''none'',''Name'',spm_file(P(i,:),''short40''),''NumberTitle'',''off''); spm_mesh_render(''ColourMap'',h.axis,jet); spm_mesh_render(''ColourBar'',h.axis,''on'');end',...
+	'CallBack', 'P=spm_select([1 24],''gifti'',''Select surface''); for i=1:size(P,1), h = spm_mesh_render(deblank(P(i,:))); set(h.figure,''MenuBar'',''none'',''Toolbar'',''none'',''Name'',spm_file(P(i,:),''short40''),''NumberTitle'',''off''); spm_mesh_render(''ColourMap'',h.axis,jet); spm_mesh_render(''ColourBar'',h.axis,''on'');end',...
 	'HandleVisibility','on');
 h72  = uimenu(h7,...
 	'Label',	'Extract surface parameters',...
